# hayselnut

./: .gitignore  Cargo.toml  README.md  build.rs
haysel/: Cargo.toml  README.md  config.example.toml  flake.nix  graph.py  ideas.rs  permissions.sh  rust-toolchain.toml  shell.nix
haysel/.cargo/: config.toml
haysel/cs_squirrel/: Cargo.toml
haysel/cs_squirrel/src/: buf.rs  env.rs  lib.rs  packet.rs
haysel/cs_squirrel/src/client/: mech.rs
haysel/cs_squirrel/src/packet/: cmd.rs  frame.rs  uid.rs
haysel/cs_squirrel/src/server/: mech.rs
haysel/cs_squirrel/src/server/mech/: send.rs  test.rs
haysel/haysel_macro/: Cargo.toml
haysel/haysel_macro/src/: lib.rs
haysel/mycelium/: Cargo.toml
haysel/mycelium/src/: lib.rs
haysel/roundtable/: Cargo.toml
haysel/roundtable/src/: common.rs  dyn_var.rs  handler.rs  id.rs  lib.rs  msg.rs  test.rs
haysel/roundtable/src/dyn_var/: dyn_downcast.rs  dyn_typename.rs
haysel/roundtable/src/handler/: async_fn_ptr.rs  decl.rs  dispatch.rs  interface.rs  macros.rs  register.rs  runtime.rs
haysel/roundtable/src/handler/interface/: local.rs
haysel/squirrel/: Cargo.toml  README.md
haysel/squirrel/src/: api.rs  lib.rs  net.rs  transport.rs
haysel/squirrel/src/api/: station.rs
haysel/squirrel/src/api/station/: capabilities.rs  identity.rs
haysel/squirrel/src/transport/: client.rs  controll.rs  frame.rs  packet.rs  server.rs  shared.rs
haysel/src/: args.rs  bus.rs  commands.rs  config.rs  consumer.rs  core.rs  dispatch.rs  flag.rs  ipc.rs  log.rs  main.rs  misc.rs  paths.rs  registry.rs  route.rs  shutdown.rs  tsdbmock.rs  util.rs
haysel/src/bus/: atomic_cell.rs  common.rs  dyn_var.rs  handler.rs  id.rs  mod.rs  msg.rs  test.rs
haysel/src/bus/handler/: async_fn_ptr.rs  decl.rs  dispatch.rs  interface.rs  macros.rs  register.rs  runtime.rs
haysel/src/bus/handler/interface/: local.rs
haysel/src/commands/: db2.rs  infodump.rs
haysel/src/consumer/: db.rs  ipc.rs
haysel/src/core/: args.rs  autosave.rs  commands.rs  config.rs  log.rs  rt.rs  shutdown.rs
haysel/src/core/commands/: db2.rs  infodump.rs
haysel/src/core/shutdown/: async_drop.rs  util.rs
haysel/src/dispatch/: application.rs  transport.rs
haysel/src/ipc/: bus.rs
haysel/src/misc/: flag.rs  paths.rs
haysel/src/net/transport/: frame.rs
haysel/src/registry/: loader.rs
haysel/src/shutdown/: async_drop.rs
haysel/src/station/: capabilities.rs
haysel/src/tsdb/: mod.rs  repr.rs
haysel/src/tsdb/alloc/: errors.rs  obj.rs  repr.rs  runner.rs  types.rs
haysel/src/tsdb2/: alloc.rs  bus.rs  error.rs  helpers.rs  mod.rs  query.rs  repr.rs  test.rs
haysel/src/tsdb2/alloc/: disk_store.rs  error.rs  object.rs  ptr.rs  repr.rs  store.rs  test.rs  util.rs
haysel/src/tsdb2/alloc/store/: disk.rs  raid.rs  test.rs  void.rs
haysel/src/tsdb2/alloc/util/: test.rs
haysel/src/tsdb2/query/: builder.rs
haysel/src/tsdb2/repr/: info.rs
haysel/src/tsdb2/test/: duplicate.rs  simple_add.rs  validation.rs
haysel/src/tsdb2/test/validation/: verified_add_periodic.rs  verified_add_sporadic.rs
haysel/src/tsdb3/: access.rs  alloc.rs  bus.rs  cmd.rs  mod.rs  ptr.rs  query.rs  registry.rs  repr.rs  test.rs
haysel/src/tsdb3/alloc/: access.rs  registry.rs  repr.rs
haysel/src/tsdb3/bus/: rt.rs
haysel/src/tsdb3/cmd/: args.rs
hayselnut/: Cargo.toml  README.md  build.rs  flake.nix  sdkconfig.defaults  setup-nix-env.zsh  shell.nix
hayselnut-embassy/: Cargo.toml  README.md  rust-toolchain.toml
hayselnut-embassy/.cargo/: config.toml
hayselnut-embassy/src/: main.rs
hayselnut/.cargo/: config.toml
hayselnut/nix-esp-idf/: default.nix  setup-hook.sh
hayselnut/nix-ldproxy/: default.nix
hayselnut/src/: error.rs  flag.rs  main.rs  periph.rs  store.rs  wifictl.rs
hayselnut/src/lightning/: mod.rs  repr.rs
hayselnut/src/lightning/registers/: display_srco_on_irq_pin.rs  display_trco_on_irq_pin.rs  distance_estimation.rs  internal_tuning_capacitors.rs  minimum_number_of_lightning.rs  power_down.rs  preset_default.rs  spike_rejection.rs  watchdog_threshold.rs
hayselnut/src/periph/: battery.rs  bme280.rs
net/: Cargo.toml
net/src/: api.rs
server/: Cargo.toml  README.md  readings.csv
server/.cargo/: config.toml
server/src/: api.rs  consumer.rs  main.rs  paths.rs  registry.rs  route.rs  shutdown.rs  station.rs
server/src/consumer/: db.rs
server/src/net/: api_old.rs  transport.rs
server/src/net/transport/: frame.rs
server/src/station/: capabilities.rs  identity.rs
server/src/tsdb/: README.md  alloc.rs  mod.rs  repr.rs
server/src/tsdb/alloc/: errors.rs  obj.rs  ptr.rs  repr.rs  runner.rs  set.rs  types.rs
src/: battery.rs  main.rs  main2.rs  repr.rs
src/lightning/: mod.rs
src/lightning/registers/: afe_gain_boost.rs  calibrate_oscillators.rs  clear_statistics.rs  display_lco_on_irq_pin.rs  frequency_division_ration_for_antenna_tuning.rs  interrupt.rs  mask_disturber.rs  mod.rs  noise_floor_level.rs
src/registers/: afe_gain_boost.rs  calibrate_oscillators.rs  clear_statistics.rs  display_lco_on_irq_pin.rs  display_srco_on_irq_pin.rs  display_trco_on_irq_pin.rs  distance_estimation.rs  frequency_division_ration_for_antenna_tuning.rs  internal_tuning_capacitors.rs  interrupt.rs  mask_disturber.rs  minimum_number_of_lightning.rs  noise_floor_level.rs  power_down.rs  preset_default.rs  spike_rejection.rs  watchdog_threshold.rs
