[package]
name = "weather-station"
version = "0.0.0"
edition = "2018"

[patch.crates-io]
# smol = { git = "https://github.com/esp-rs-compat/smol" }
# polling = { git = "https://github.com/esp-rs-compat/polling/" }
# socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
# getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }

[profile.release]
codegen-units=1
lto=true
strip=true
opt-level = "z"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]

experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
# url = "2"
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-svc = "0.42"
esp-idf-hal = "0.38"
embedded-hal = "=1.0.0-alpha.8"
# embedded-hal-7= { package = "embedded-hal", version = "=1.0.0-alpha.7" }
embedded-svc = { version = "0.22.0", optional = true, default-features = false }
num = "0.4.0"
thiserror = "1.0.31"
# bme280 = "0.4.4"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
