[package]
name = "haysel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
#bincode = "1.3.3"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
#csv = "1.1.6"
flume = "0.10.14"
#semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
static_assertions = "1.1.0"
tokio = { version = "1.25.0", features = ["full"] }
zerocopy = "0.6.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
derivative = "2.2.0"
serde_json = "1.0.94"
async-trait = "0.1.68"
uuid = { version = "1.3.1", features = ["v4", "serde", "zerocopy"] }
rmp-serde = "1.1.1"
trust-dns-resolver = { version = "0.22.0", features = ["tokio"] }
rmpv = { version = "1.0.0", features = ["serde", "serde_bytes", "with-serde"] }
bitflags = "2.3.3"
tracing-test = "0.2.4"
num_enum = "0.6.1"
rand = "0.8.5"
#rmp-serde = "1.1.1"
#blake3 = "1.3.3"
#num_enum = "0.6.0"

[dependencies.squirrel]
path = "squirrel"
features = ["server-utils", "tokio"]

[dependencies.mycelium]
path = "mycelium"

[dependencies.haysel_macro]
path = "haysel_macro"

[workspace]
members = [
    "squirrel",
    "mycelium",
    "haysel_macro",
]
