[package]
name = "haysel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
#bincode = "1.3.3"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
#csv = "1.1.6"
flume = "0.11.0"
#semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
static_assertions = "1.1.0"
tokio = { version = "1.25.0", features = ["full"] }
zerocopy = { version = "0.7.5", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
derivative = "2.2.0"
serde_json = "1.0.94"
async-trait = "0.1.68"
uuid = { version = "1.3.1", features = ["v4", "serde", "zerocopy"] }
rmp-serde = "1.1.1"
trust-dns-resolver = { version = "0.23.0", features = ["tokio"] }
rmpv = { version = "1.0.0", features = ["serde", "serde_bytes", "with-serde"] }
bitflags = "2.3.3"
tracing-test = "0.2.4"
num_enum = "0.7.0"
rand = "0.8.5"
futures = "0.3"
config = { version = "0.13.3", features = ["preserve_order"] }
nix = { version = "0.27.1", features = ["signal", "process"] }
#dabus = { version = "0.5.1" }
tracing-log = "0.1.3"
#rmp-serde = "1.1.1"
#blake3 = "1.3.3"
#num_enum = "0.6.0"

[profile.release]
lto = true
codegen-units = 1

[dependencies.squirrel]
path = "squirrel"
features = ["server-utils"]

[dependencies.mycelium]
path = "mycelium"

[dependencies.haysel_macro]
path = "haysel_macro"

[dependencies.roundtable]
path = "roundtable"

[workspace]
members = [
  "squirrel",
  "mycelium",
  "haysel_macro",
  "roundtable",
]
