[package]
name = "haysel"
version = "1.1.0"
edition = "2021"
license = "GPLv3"
readme = "README.md"
authors = ["Rowan S-L <rowan@fawkes.io>"]
description = "Haysel - datalogging and distrobution for the hayselnut project"
repository = "https://git.fawkes.io/mtnash/hayselnut/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
flume = "0.11"
serde = { version = "1.0", features = ["derive"] }
static_assertions = "1.1"
tokio = { version = "1", features = ["full"] }
zerocopy = { version = "0.7", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derivative = "2.2"
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.4", features = ["v4", "serde", "zerocopy"] }
rmp-serde = "1.1"
trust-dns-resolver = { version = "0.23", features = ["tokio"] }
bitflags = "2.4"
tracing-test = "0.2"
num_enum = "0.7"
rand = "0.8"
futures = "0.3"
config = { version = "0.14", features = ["preserve_order"] }
nix = { version = "0.27", features = ["signal", "process"] }
tracing-log = "0.2"
tracing-appender = "0.2"
memmap2 = "0.9"

[profile.release]
lto = true
codegen-units = 1

[dependencies.squirrel]
path = "squirrel"
features = ["server-utils"]

[dependencies.mycelium]
path = "mycelium"

[dependencies.roundtable]
path = "roundtable"

[workspace]
members = [
  "squirrel",
  "mycelium",
  "roundtable",
]
