[package]
name = "hayselnut-embassy"
version = "0.1.0"
edition = "2021"
authors = ["rowan-sl <r@fawkes.io>"]
resolver = "2"

[profile.release]
codegen-units=1
lto = false
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
lto = false
opt-level = "s"

[dependanices.esp-wifi]
features = ["esp32c3", "wifi", "async"]

[profile.dev.packages.esp-wifi]
opt-level = 3

[dependencies]
esp32c3-hal = { version = "0.13.0", default-features = false }
embassy-net = { version = "0.2.1", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-executor = { version = "=0.3.2", package = "embassy-executor", features = ["nightly", "executor-thread", "integrated-timers"] } # temporarily pin because we aren't ready for portable-atomic yet
embassy-time = { version = "0.1.3", features = ["nightly"] }

# anyhow = {version = "1", features = ["backtrace"]}
# log = "0.4"
# esp-idf-sys = { version = "0.33", features = ["binstart"] }
# esp-idf-svc = "0.46"
# esp-idf-hal = "0.41"
# embedded-hal = "=1.0.0-alpha.10"
# embedded-svc = { version = "0.25", default-features = false }
# num = "0.4.0"
# thiserror = "1.0.31"
# bme280 = { git = "https://github.com/rowan-sl/bme280-rs" }
# #shared-bus = { version = "0.2.5", features = ["eh-alpha", "std"] }
# #embedded-graphics = "0.7.1"
# #ssd1306 = "0.7.1"
# futures = { version = "0.3.25", default-features = false, features = ["async-await"] }
# serde = { version = "1.0.152", features = ["derive"] }
# uuid = { version = "1.3.1", features = ["serde", "v4"] }
# static_assertions = "1.1.0"
# rmp-serde = "1.1.1"
# # WARNING: the `sync` feature cannot be used - will cause `pthread` related linker errors
# tokio = { version = "*", features = ["rt", "net", "io-util"] }
# mio = { version = "0.8.8", features = ["log"] }

