[package]
name = "hayselnut"
version = "0.1.0"
edition = "2021"
authors = ["rowan-sl <r@fawkes.io>"]
resolver = "2"

[package.metadata.espflash]
partition_table = "partitions.csv"

[patch.crates-io]
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
# yeeeee haw
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
mio = { git = "https://github.com/tokio-rs/mio", branch = "master" }
socket2 = { git = "https://github.com/rust-lang/socket2", branch = "master" }


[profile.release]
codegen-units=1
#lto=true
#strip=true
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
esp-idf-sys = { version = "0.33", features = ["binstart"] }
esp-idf-svc = "0.46"
esp-idf-hal = "0.41"
embedded-hal = "=1.0.0-alpha.10"
embedded-svc = { version = "0.25", default-features = false }
num = "0.4.0"
thiserror = "1.0.31"
bme280 = { git = "https://github.com/rowan-sl/bme280-rs" }
#shared-bus = { version = "0.2.5", features = ["eh-alpha", "std"] }
#embedded-graphics = "0.7.1"
#ssd1306 = "0.7.1"
futures = { version = "0.3.25", default-features = false, features = ["async-await"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
static_assertions = "1.1.0"
rmp-serde = "1.1.1"
# WARNING: the `sync` feature cannot be used - will cause `pthread` related linker errors
tokio = { version = "*", features = ["rt", "net", "io-util"] }
mio = { version = "0.8.8", features = ["log"] }

[dependencies.squirrel]
path = "../haysel/squirrel/"
features = ["tokio"]

[build-dependencies]
embuild = "0.31.0"
chrono = "0.4.26"
