[package]
name = "hayselnut-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bincode = "1.3.3"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
csv = "1.1.6"
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
static_assertions = "1.1.0"
tokio = { version = "1.25.0", features = ["full"] }
zerocopy = "0.6.1"
