[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
tokio = { version = "1.28", features = ["io-util"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.squirrel]
path = "../squirrel"
features = ["server-utils"]
