[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
#readme = "README.md"
authors = ["Rowan S-L <rowan@fawkes.io>"]
description = "Mycelium - IPC Protocol for the hayselnut data server"
repository = "https://git.fawkes.io/mtnash/hayselnut/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
tokio = { version = "1.33", features = ["io-util"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dependencies.squirrel]
path = "../squirrel"
features = ["server-utils"]
