[package]
name = "roundtable"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
#readme = "README.md"
authors = ["Rowan S-L <rowan@fawkes.io>"]
description = "RoundTable - Application Bus library for the hayselnut project, spiritual successor to dabus"
repository = "https://git.fawkes.io/mtnash/hayselnut/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.33", features = ["sync"] }
flume = "0.11"
tracing = "0.1"
uuid = { version = "1.3.1", features = ["v4"] }
futures = "0.3"
thiserror = "1.0"
tracing-test = "0.2"
async-trait = "0.1"
const-random = "0.1"

[dev-dependencies]
tokio = { version = "1.33", features = ["full"] }

[features]
default = ["bus_dbg"]
bus_dbg = []
