[package]
name = "squirrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#blake3 = "1.3.3"
num_enum = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
static_assertions = "1.1.0"
zerocopy = "0.6.4"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
log = { version = "0.4", optional = true }
tokio = { version = "1.27.0", features = ["net", "time"] }
tracing = { version = "0.1" }
#async-trait = "0.1.68"
futures = "0.3"
flume = "0.11"
thiserror = "1.0.40"

[features]
server-utils = []
log = ["dep:log"]


