[package]
name = "squirrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#blake3 = "1.3.3"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
static_assertions = "1.1"
zerocopy = "0.7"
uuid = { version = "1.4", features = ["v4", "serde"] }
log = { version = "0.4", optional = true }
tokio = { version = "1.33", features = ["net", "time"] }
tracing = { version = "0.1" }
futures = "0.3"
flume = "0.11"
thiserror = "1.0"

[features]
server-utils = []
log = ["dep:log"]


