[package]
name = "squirrel"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
readme = "README.md"
authors = ["Rowan S-L <rowan@fawkes.io>"]
description = "Squirrel - transport protocol and network API for the hayselnut project"
repository = "https://git.fawkes.io/mtnash/hayselnut/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
static_assertions = "1.1"
zerocopy = { version = "0.7", features = ["derive"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
log = { version = "0.4", optional = true }
tokio = { version = "1", features = ["net", "time"] }
tracing = { version = "0.1" }
futures = "0.3"
flume = "0.11"
thiserror = "1.0"

[features]
server-utils = []
log = ["dep:log"]


